# unkork

./: .gitignore  Containerfile  INVARIANTS.md  README.md  flake.nix  justfile  overlay.nix  pyproject.toml
.forgejo/workflows/: deploy.yml
.ko/: config.yaml
src/unkork/: cli.py  dataset.py  embeddings.py  features.py  model.py  mood_map.py  pca.py  refinement.py  scoring.py  synthesis.py  tensors.py  training.py
tests/: test_cli.py  test_dataset.py  test_features.py  test_model.py  test_mood_map.py  test_pca.py  test_scoring.py  test_tensors.py  test_training.py
