[project]
name = "unkork"
version = "0.1.0"
description = "Regression codec for Kokoro TTS voice creation"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "resemblyzer>=0.1.3",
    "cma>=3.3",
    "soundfile>=0.12",
    "click>=8.0",
]

[project.optional-dependencies]
kokoro = [
    "kokoro>=0.9",
    "kokoro-onnx>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.scripts]
unkork = "unkork.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
